# hw_8_part_2

./: pyproject.toml
hw_8_part_2/: config.ini  consumer_email.py  consumer_sms.py  models.py  producer.py
