[tool.poetry]
name = "hw-8-part-2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "hw_8_part_2"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.2"
mongoengine = "^0.27.0"
faker = "^19.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
